--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,6 +17,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
+  <script src="/js/list.js"></script>
+
   <title>Rakus Items</title>
 </head>
 
@@ -30,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="./list.html">Rakus Items</a>
+      <a class="navbar-brand" href="/">Rakus Items</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <div>
@@ -58,29 +60,14 @@
         </div>
         <div class="form-group"><i class="fa fa-plus"></i></div>
         <div class="form-group">
-          <select class="form-control">
+          <select class="form-control parent-category">
             <option>- parentCategory -</option>
-            <option>parentCategory1</option>
-            <option>parentCategory2</option>
-            <option>parentCategory3</option>
-            <option>parentCategory4</option>
-            <option>parentCategory5</option>
           </select>
-          <select class="form-control">
+          <select class="form-control child-category">
             <option>- childCategory -</option>
-            <option>childCategory1</option>
-            <option>childCategory2</option>
-            <option>childCategory3</option>
-            <option>childCategory4</option>
-            <option>childCategory5</option>
           </select>
-          <select class="form-control">
+          <select class="form-control grandChild-category">
             <option>- grandChild -</option>
-            <option>grandChild1</option>
-            <option>grandChild2</option>
-            <option>grandChild3</option>
-            <option>grandChild4</option>
-            <option>grandChild5</option>
           </select>
         </div>
         <div class="form-group"><i class="fa fa-plus"></i></div>
@@ -119,8 +106,8 @@
             <td class="item-name"><a href="./detail.html" th:text="*{name}">Razer BlackWidow Chroma Keyboard</a></td>
             <td class="item-price" th:text="*{price}">52.0</td>
             <td class="item-category">
-              <a href="" th:text="*{categoryPath.get('parent')}">Electronics</a> / 
-              <a href="" th:text="*{categoryPath.get('child')}">Electronics</a> / 
+              <a href="" th:text="*{categoryPath.get('parent')}">Electronics</a> /
+              <a href="" th:text="*{categoryPath.get('child')}">Electronics</a> /
               <a href="" th:text="*{categoryPath.get('grandChild')}">Electronics</a>
             <td class="item-brand" th:text="*{brand}"><a href="">Razer</a></td>
             <td class="item-condition" th:text="*{condition}">3</td>
@@ -147,7 +134,7 @@
             <td class="item-brand"></td>
             <td class="item-condition">1</td>
           </tr>
-          
+
         </tbody>
       </table>
     </div>
