--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -78,19 +78,24 @@
         <button type="submit" class="btn btn-default"><i class="fa fa-angle-double-right"></i> search</button>
       </form>
       <div style="font-weight: bold;">maches&nbsp;<span th:text="${size}"></span>&nbsp;items</div>
+      <div style="font-weight: bold;">Now&nbsp;on&nbsp;page&nbsp;<span th:text="${page}"></span></div>
     </div>
     <div class="category" th:object="${searchForm}">
       <input type="hidden" th:field="*{parentCategory}">
       <input type="hidden" th:field="*{childCategory}">
       <input type="hidden" th:field="*{grandChildCategory}">
     </div>
-      
+
     <!-- pagination -->
     <div class="pages">
       <nav class="page-nav">
         <ul class="pager">
-          <li class="previous"><a href="#">&larr; prev</a></li>
-          <li class="next"><a href="#">next &rarr;</a></li>
+          <li class="previous"><a
+              th:href="@{/(page=${page} - 1, itemName=${searchForm.itemName}, parentCategory=${searchForm.parentCategory}, childCategory=${searchForm.childCategory}, grandChildCategory=${searchForm.grandChildCategory}, brand=${searchForm.brand} )}">&larr;
+              prev</a></li>
+          <li class="next"><a
+              th:href="@{/(page=${page} + 1, itemName=${searchForm.itemName}, parentCategory=${searchForm.parentCategory}, childCategory=${searchForm.childCategory}, grandChildCategory=${searchForm.grandChildCategory}, brand=${searchForm.brand} )}">next
+              &rarr;</a></li>
         </ul>
       </nav>
     </div>
@@ -149,19 +154,24 @@
     <div class="pages">
       <nav class="page-nav">
         <ul class="pager">
-          <li class="previous"><a href="#">&larr; prev</a></li>
-          <li class="next"><a th:href="@{/(page=${pageNumber}, itemName=${itemName}, id=${id})}">next &rarr;</a></li>
+          <li class="previous"><a
+              th:href="@{/(page=${page} - 1, itemName=${searchForm.itemName}, parentCategory=${searchForm.parentCategory}, childCategory=${searchForm.childCategory}, grandChildCategory=${searchForm.grandChildCategory}, brand=${searchForm.brand} )}">&larr;
+              prev</a></li>
+          <li class="next"><a
+              th:href="@{/(page=${page} + 1, itemName=${searchForm.itemName}, parentCategory=${searchForm.parentCategory}, childCategory=${searchForm.childCategory}, grandChildCategory=${searchForm.grandChildCategory}, brand=${searchForm.brand} )}">next
+              &rarr;</a></li>
         </ul>
       </nav>
       <!-- ページ番号を指定して表示するフォーム -->
       <div id="select-page">
+        <div style="font-weight: bold;">Now&nbsp;on&nbsp;page&nbsp;<span th:text="${page}"></span></div>
         <form class="form-inline">
           <div class="form-group">
             <div class="input-group col-xs-6">
               <label></label>
               <input type="text" class="form-control" />
               <!-- 総ページ数 -->
-              <div class="input-group-addon">/ 20</div>
+              <div class="input-group-addon">/ <span th:text="${totalPage}"></span></div>
             </div>
             <div class="input-group col-xs-1">
               <button type="submit" class="btn btn-default">Go</button>
