編集機能の追加

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -87,7 +87,7 @@
           </tr>
         </tbody>
       </table>
-      <a type="button" class="btn btn-default" th:href="@{/edit(id=${item.id})}"><i class="fa fa-pencil-square-o"></i>&nbsp;edit</a>
+      <a type="button" class="btn btn-default" th:href="@{/to-edit(id=${item.id})}"><i class="fa fa-pencil-square-o"></i>&nbsp;edit</a>
     </div>
   </div>
 </body>
