--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- css -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" 
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="./mercari.css"/>
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/mercari.css" />
   <!-- script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <script src="/js/edit.js"></script>
+
   <title>Rakus Items</title>
 </head>
+
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+        aria-expanded="false" aria-controls="navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -42,101 +48,86 @@
 
   <!-- details -->
   <div id="input-main" class="container">
-    <a type="button" class="btn btn-default" href="./detail.html"><i class="fa fa-reply"></i> back</a>
+    <a type="button" class="btn btn-default" th:href="@{/detail}" onclick="window.history.back(); return false;"><i
+        class="fa fa-reply"></i> back</a>
     <h2>Edit</h2>
 
     <!-- edit form -->
-    <form action="#" method="POST" class="form-horizontal">
-        <!-- name -->
-        <div class="form-group">
-          <label for="inputName" class="col-sm-2 control-label">name</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="inputName"/>
-          </div>
+    <form th:action="@{/edit}" method="POST" class="form-horizontal" th:object="${editForm}">
+      <!-- id -->
+      <input type="hidden" th:field="*{id}" />
+      <!-- name -->
+      <div class="form-group">
+        <label for="inputName" class="col-sm-2 control-label">name</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" th:field="*{name}" />
         </div>
-        <!-- price -->
-        <div class="form-group">
-          <label for="price" class="col-sm-2 control-label">price</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="price"/>
-          </div>
+      </div>
+      <!-- price -->
+      <div class="form-group">
+        <label for="price" class="col-sm-2 control-label">price</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" th:field="*{price}" />
         </div>
-        <!-- category -->
-        <div class="form-group">
-          <label for="category" class="col-sm-2 control-label">category</label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option>- parentCategory -</option>
-              <option>parentCategory1</option>
-              <option>parentCategory2</option>
-              <option>parentCategory3</option>
-              <option>parentCategory4</option>
-              <option>parentCategory5</option>
-            </select>
-          </div>
+      </div>
+      <!-- category -->
+      <div class="form-group">
+        <label for="category" class="col-sm-2 control-label">category</label>
+        <div class="col-sm-8">
+          <select class="form-control parent" th:field="*{parent}">
+            <option value="">- parentCategory -</option>
+          </select>
+          <select class="form-control child" th:field="*{child}">
+            <option value="">- childCategory -</option>
+          </select>
+          <select class="form-control grandChild" th:field="*{grandChild}">
+            <option value="">- grandChild -</option>
+          </select>
         </div>
-        <div class="form-group">
-          <label for="category" class="col-sm-2 control-label"></label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option>- childCategory -</option>
-              <option>childCategory1</option>
-              <option>childCategory2</option>
-              <option>childCategory3</option>
-              <option>childCategory4</option>
-              <option>childCategory5</option>
-            </select>
-          </div>
+      </div>
+      <!-- brand -->
+      <div class="form-group">
+        <label for="brand" class="col-sm-2 control-label">brand</label>
+        <div class="col-sm-8">
+          <input type="text" id="brand" class="form-control" th:field="*{brand}" />
         </div>
-        <div class="form-group">
-          <label for="category" class="col-sm-2 control-label"></label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option>- grandChild -</option>
-              <option>grandChild1</option>
-              <option>grandChild2</option>
-              <option>grandChild3</option>
-              <option>grandChild4</option>
-              <option>grandChild5</option>
-            </select>
-          </div>
+      </div>
+      <!-- condition -->
+      <div class="form-group">
+        <label for="condition" class="col-sm-2 control-label">condition</label>
+        <div class="col-sm-8">
+          <label for="condition1" class="radio-inline">
+            <input type="radio" name="condition" id="condition1" value="1" th:field="*{condition}" /> 1
+          </label>
+          <label for="condition2" class="radio-inline">
+            <input type="radio" name="condition" id="condition2" value="2" th:field="*{condition}" /> 2
+          </label>
+          <label for="condition3" class="radio-inline">
+            <input type="radio" name="condition" id="condition3" value="3" th:field="*{condition}" /> 3
+          </label>
         </div>
-        <!-- brand -->
-        <div class="form-group">
-          <label for="brand" class="col-sm-2 control-label">brand</label>
-          <div class="col-sm-8">
-            <input type="text" id="brand" class="form-control" name="brand"/>
-          </div>
+      </div>
+      <!-- description -->
+      <div class="form-group">
+        <label for="description" class="col-sm-2 control-label">description</label>
+        <div class="col-sm-8">
+          <textarea class="form-control" th:field="*{description}" rows="5"></textarea>
         </div>
-        <!-- condition -->
-        <div class="form-group">
-          <label for="condition" class="col-sm-2 control-label">condition</label>
-          <div class="col-sm-8">
-            <label for="condition1" class="radio-inline">
-              <input type="radio" name="condition" id="condition1" value="1"/> 1
-            </label>
-            <label for="condition2" class="radio-inline">
-              <input type="radio" name="condition" id="condition2" value="2"/> 2
-            </label>
-            <label for="condition3" class="radio-inline">
-              <input type="radio" name="condition" id="condition3" value="3"/> 3
-            </label>
-          </div>
+      </div>
+      <!-- submit button -->
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Submit</button>
         </div>
-        <!-- description -->
-        <div class="form-group">
-          <label for="description" class="col-sm-2 control-label">description</label>
-          <div class="col-sm-8">
-            <textarea name="description" id="description" class="form-control" rows="5"></textarea>
-          </div>
-        </div>
-        <!-- submit button -->
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
-          </div>
-        </div>
-      </form>
+      </div>
+    </form>
+    <!-- category -->
+    <div class="category" th:object="${editForm}">
+      <input type="hidden" th:field="*{parent}">
+      <input type="hidden" th:field="*{child}">
+      <input type="hidden" th:field="*{grandChild}">
     </div>
+  </div>
 </body>
+
 </html>
