--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -55,8 +55,17 @@
     <!-- edit form -->
     <form th:action="@{/edit}" method="POST" class="form-horizontal" th:object="${editForm}">
       <!-- id -->
+      <div class="form-group" th:if="*{#fields.hasErrors('id')}" >
+        
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{id}" style="color: red">error!</div>
+      </div>
       <input type="hidden" th:field="*{id}" />
       <!-- name -->
+      <div class="form-group" th:if="*{#fields.hasErrors('name')}" >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{name}" style="color: red">error!</div>
+      </div>
       <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">name</label>
         <div class="col-sm-8">
@@ -64,6 +73,10 @@
         </div>
       </div>
       <!-- price -->
+      <div class="form-group" th:if="*{#fields.hasErrors('price')}" >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{price}" style="color: red">error!</div>
+      </div>
       <div class="form-group">
         <label for="price" class="col-sm-2 control-label">price</label>
         <div class="col-sm-8">
@@ -71,6 +84,18 @@
         </div>
       </div>
       <!-- category -->
+      <div class="form-group" th:if="*{#fields.hasErrors('parent')}" >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{parent}" style="color: red">error!</div>
+      </div>
+      <div class="form-group" th:if="*{#fields.hasErrors('child')}" >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{child}" style="color: red">error!</div>
+      </div>
+      <div class="form-group" th:if="*{#fields.hasErrors('grandChild')}" >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" th:errors="*{grandChild}" style="color: red">error!</div>
+      </div>
       <div class="form-group">
         <label for="category" class="col-sm-2 control-label">category</label>
         <div class="col-sm-8">
