--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -22,31 +22,12 @@
 
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-inverse">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-        aria-expanded="false" aria-controls="navbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="./list.html">Rakus Items</a>
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a id="logout" href="./login.html">Logout&nbsp;<i class="fa fa-power-off"></i></a></li>
-        </ul>
-        <p class="navbar-text navbar-right">
-          <span id="loginName">user: userName</span>
-        </p>
-      </div>
-    </div>
-  </nav>
+  <div th:insert="~{fragment_navbar :: navbar}"></div>
 
   <!-- details -->
   <div class="container">
-    <a type="button" class="btn btn-default" th:href="@{/}" onclick="window.history.back(); return false;"><i class="fa fa-reply"></i> back</a>
+    <a type="button" class="btn btn-default" th:href="@{/}" onclick="window.history.back(); return false;"><i
+        class="fa fa-reply"></i> back</a>
     <h2>Details</h2>
     <div id="details">
       <table class="table table-hover">
@@ -61,7 +42,8 @@
           </tr>
           <tr>
             <th>price</th>
-            <td>$<th:block th:text="*{price}">52.0</th:block></td>
+            <td>$<th:block th:text="*{price}">52.0</th:block>
+            </td>
           </tr>
           <tr>
             <th>category</th>
@@ -81,13 +63,15 @@
           </tr>
           <tr>
             <th>description</th>
-            <td th:text="*{description}">I realized his pants are on backwards after the picture. They were very dirty so I hand washed them. He
+            <td th:text="*{description}">I realized his pants are on backwards after the picture. They were very dirty
+              so I hand washed them. He
               has a stuffed body and painted porcelain head, hands and feet. Back before clowns were too scary. 9""
               tall. No chips or cracks but minor paint loss in a few places. Clown Circus Doll Collectible</td>
           </tr>
         </tbody>
       </table>
-      <a type="button" class="btn btn-default" th:href="@{/to-edit(id=${item.id})}"><i class="fa fa-pencil-square-o"></i>&nbsp;edit</a>
+      <a type="button" class="btn btn-default" th:href="@{/to-edit(id=${item.id})}"><i
+          class="fa fa-pencil-square-o"></i>&nbsp;edit</a>
     </div>
   </div>
 </body>
