--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,9 +19,7 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-inverse">
-    <a class="navbar-brand" href="./list.html">Rakus Items</a>
-  </nav>
+  <div th:insert="~{fragment_navbar :: navbar-simple}"></div>
 
   <!-- register form -->
   <div id="login" class="container">
