--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -36,46 +36,28 @@
     <form th:action="@{/edit}" method="POST" class="form-horizontal" th:object="${editForm}">
       <!-- id -->
       <div class="form-group" th:if="*{#fields.hasErrors('id')}" >
-        
         <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{id}" style="color: red">error!</div>
+        <div class="col-sm-8 text-danger" th:errors="*{id}">error!</div>
       </div>
       <input type="hidden" th:field="*{id}" />
       <!-- name -->
-      <div class="form-group" th:if="*{#fields.hasErrors('name')}" >
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{name}" style="color: red">error!</div>
-      </div>
       <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">name</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" th:field="*{name}" />
+          <span class="text-danger" th:if="*{#fields.hasErrors('name')}" th:errors="*{name}">error:may not be empty</span>
         </div>
       </div>
       <!-- price -->
-      <div class="form-group" th:if="*{#fields.hasErrors('price')}" >
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{price}" style="color: red">error!</div>
-      </div>
       <div class="form-group">
         <label for="price" class="col-sm-2 control-label">price</label>
         <div class="col-sm-8">
           <input type="text" class="form-control" th:field="*{price}" />
+          <span class="text-danger" th:if="*{#fields.hasErrors('price')}" th:errors="*{price}">error:may not be empty</span>
         </div>
       </div>
       <!-- category -->
-      <div class="form-group" th:if="*{#fields.hasErrors('parent')}" >
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{parent}" style="color: red">error!</div>
-      </div>
-      <div class="form-group" th:if="*{#fields.hasErrors('child')}" >
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{child}" style="color: red">error!</div>
-      </div>
-      <div class="form-group" th:if="*{#fields.hasErrors('grandChild')}" >
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" th:errors="*{grandChild}" style="color: red">error!</div>
-      </div>
+
       <div class="form-group">
         <label for="category" class="col-sm-2 control-label">category</label>
         <div class="col-sm-8">
@@ -88,6 +70,9 @@
           <select class="form-control grandChild" th:field="*{grandChild}">
             <option value="">- grandChild -</option>
           </select>
+          <span class="text-danger" th:if="*{#fields.hasErrors('parent')}" th:errors="*{parent}">error:may not be empty</span>
+          <span class="text-danger" th:if="*{#fields.hasErrors('child')}" th:errors="*{child}">error:may not be empty</span>
+          <span class="text-danger" th:if="*{#fields.hasErrors('grandChild')}" th:errors="*{grandChild}">error:may not be empty</span>
         </div>
       </div>
       <!-- brand -->
