conditionのバリデーションを追加

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -33,7 +33,7 @@
     <h2>Edit</h2>
 
     <!-- edit form -->
-    <form th:action="@{/edit}" method="POST" class="form-horizontal" th:object="${editForm}">
+    <form th:action="@{/edit}" method="POST" class="form-horizontal" th:object="${editItemForm}">
       <!-- id -->
       <div class="form-group" th:if="*{#fields.hasErrors('id')}" >
         <div class="col-sm-2"></div>
@@ -95,6 +95,7 @@
           <label for="condition3" class="radio-inline">
             <input type="radio" name="condition" id="condition3" value="3" th:field="*{condition}" /> 3
           </label>
+          <div class="text-danger" th:if="*{#fields.hasErrors('condition')}" th:errors="*{condition}">error:may not be empty</div>
         </div>
       </div>
       <!-- description -->
@@ -112,7 +113,7 @@
       </div>
     </form>
     <!-- category -->
-    <div class="category" th:object="${editForm}">
+    <div class="category" th:object="${editItemForm}">
       <input type="hidden" th:field="*{parent}">
       <input type="hidden" th:field="*{child}">
       <input type="hidden" th:field="*{grandChild}">
