--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="_csrf" th:content="${_csrf.token}" />
+  <meta name="_csrf_header" th:content="${_csrf.headerName}" />
   <!-- css -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
@@ -13,11 +15,12 @@
     integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
   <link rel="stylesheet" href="/css/mercari.css" />
   <!-- script -->
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-  <script src="/js/list.js"></script>
+  <script th:src="@{/js/list.js}"></script>
 
   <title>Rakus Items</title>
 </head>
@@ -58,6 +61,7 @@
           <input type="text" class="form-control" th:field="*{brand}" placeholder="brand" />
         </div>
         <div class="form-group"></div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         <button type="submit" class="btn btn-default"><i class="fa fa-angle-double-right"></i> search</button>
       </form>
       <div style="font-weight: bold;">maches&nbsp;<span th:text="${size}"></span>&nbsp;items</div>
@@ -103,7 +107,8 @@
             <td class="item-category">
               <a th:href="@{/(parentCategory=*{parent})}" th:text="*{parent}">Electronics</a> /
               <a th:href="@{/(parentCategory=*{parent}, childCategory=*{child})}" th:text="*{child}">Electronics</a> /
-              <a th:href="@{/(parentCategory=*{parent}, childCategory=*{child}, grandChildCategory=*{grandChild})}" th:text="*{grandChild}">Electronics</a>
+              <a th:href="@{/(parentCategory=*{parent}, childCategory=*{child}, grandChildCategory=*{grandChild})}"
+                th:text="*{grandChild}">Electronics</a>
             <td class="item-brand" th:text="*{brand}"><a href="">Razer</a></td>
             <td class="item-condition" th:text="*{condition}">3</td>
           </tr>
