categoryページへのリンクを作成

--- a/src/main/resources/templates/fragment_navbar.html
+++ b/src/main/resources/templates/fragment_navbar.html
@@ -15,6 +15,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" th:href="@{/}">Rakus Items</a>
+        <a class="navbar-brand" th:href="@{/category}">Category</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <div>
